--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<header>
+<head>
     <title>Google</title>
-</header>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 
 <body>
-    <img alt="Google" scr="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" width="277" height="92">
-    <h2>test test</h2>
+    <div class="header">
+        <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Store</a></li>
+        </ul>
+        <ul>
+            <li><a href="#">Gmail</a></li>
+            <li><a href="#">Images</a></li>
+            <li><a href="#">Sign In</a></li>
+        </ul>
+    </div>
+
+    <div class="content">
+        <img alt="Google logo" scr="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" width="277" height="92">
+    </div>
+    
+    
 </body>
 
 
