add navigation and google logo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <div class="header">
+    <div class="nav">
         <ul>
             <li><a href="#">About</a></li>
             <li><a href="#">Store</a></li>
@@ -19,7 +19,7 @@
     </div>
 
     <div class="content">
-        <img alt="Google logo" scr="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" width="277" height="92">
+        <img alt="Google logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" width="277" height="92">
     </div>
     
     
