--- a/index.html
+++ b/index.html
@@ -21,9 +21,30 @@
     <div class="content">
         <img alt="Google logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" width="277" height="92">
     </div>
+
     
-    
+    <div class="searchBar">
+        <input type="text">
+    </div>
+
+    <div class="btn">
+        <button type="submit">Google Search</button> 
+        <button type="submit">I'm Feeling Lucky</button>
+    </div>  
 </body>
-
-
+ 
+<footer>
+   <div class="footer">
+    <ul>
+        <li><a href="#">Advertersing</a></li>
+        <li><a href="#">Business</a></li>
+        <li><a href="#">How Search works</a></li>
+    </ul>
+    <ul>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Settings</a></li>
+    </ul>
+   </div>
+</footer>
 </html>
