some updates on styling and I also added comments on both html and css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    <!-- NAV BAR -->
     <div class="nav">
         <ul>
             <li><a href="#">About</a></li>
@@ -18,33 +19,37 @@
         </ul>
     </div>
 
-    <div class="content">
+    <!-- GOOGLE IMG -->
+    <div class="google">
         <img alt="Google logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" width="277" height="92">
     </div>
 
-    
+    <!-- SEARCH BAR-->
     <div class="searchBar">
         <input type="text">
     </div>
 
+    <!-- BUTTONS -->
     <div class="btn">
-        <button type="submit">Google Search</button> 
+        <button type="submit">Google Search</button>
         <button type="submit">I'm Feeling Lucky</button>
-    </div>  
-</body>
- 
-<footer>
-   <div class="footer">
-    <ul>
-        <li><a href="#">Advertersing</a></li>
-        <li><a href="#">Business</a></li>
-        <li><a href="#">How Search works</a></li>
-    </ul>
-    <ul>
-        <li><a href="#">Privacy</a></li>
-        <li><a href="#">Terms</a></li>
-        <li><a href="#">Settings</a></li>
-    </ul>
-   </div>
-</footer>
+    </div>
+
+    <!-- FOOTER -->
+    <footer>
+        <div class="footer">
+        <ul>
+            <li><a href="#">Advertersing</a></li>
+            <li><a href="#">Business</a></li>
+            <li><a href="#">How Search works</a></li>
+        </ul>
+        <ul>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Settings</a></li>
+        </ul>
+        </div>
+    </footer>
+
+ </body>
 </html>
